# ATmega328P-HAL-Driver

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  README.md  atmega328p-hal-driver.geany
.github/workflows/: doxygen-gh-pages.yml
docs/: Doxyfile  README.md  conf.py  development.md  getting-started.md  gpio.md  io.md  io_ports.md  memories.md  power.md  power_management_and_sleep_modes.md  system.md  system_control_and_reset.md  twi.md  usage.md  usart.md
docs/source/: Doxyfile  conf.py  index.rst
docs/sphinx/: conf.py  index.rst
examples/: README.md
examples/power/: CMakeLists.txt  power.c
examples/system/: system.c  (+2 more)
inc/: atmega328p_hal.h  atmega328p_hal_eeprom.h  atmega328p_hal_internals.h  atmega328p_hal_io.h  atmega328p_hal_power.h  atmega328p_hal_system.h  atmega328p_hal_twi.h  atmega328p_hal_usart.h  eeprom.h  hal_internals.h  io.h  power.h  usart.h
include/: atmega328p_hal.h  atmega328p_hal_internals.h  atmega328p_hal_memories.h  atmega328p_hal_power.h  atmega328p_hal_system.h  atmega328p_hal_twi_internals.h  atmega328p_hal_usart.h  hal.h  hal_gpio.h  hal_internals.h  hal_io.h  hal_power.h  hal_system.h  hal_usart.h
src/: atmega328p_hal_eeprom.c  atmega328p_hal_io.c  atmega328p_hal_memories.c  atmega328p_hal_power.c  atmega328p_hal_system.c  atmega328p_hal_twi.c  atmega328p_hal_usart.c  atmega328p_hal_usart_extra.c  eeprom.c  hal_gpio.c  hal_io.c  hal_power.c  hal_system.c  hal_usart.c  hal_usart_extra.c  io.c  power.c  usart.c
tests/: Makefile  README.md  template_integration_test_makefile  template_unit_test_makefile  test.c
(+87 files in other folders)
